--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ textarea {
   <button class="button" onclick="addNote()">Add Note</button>
   <button class="button download-button" onclick="downloadNote()">Download Note</button>
   <div class="footer">
-    <p>&copy; 2024 My Notes - All rights reserved | <a href="https://taezeem.github.io/About_Me.io" target="_blank">About Me</a></p>
+    <p>&copy; 2024 My Notes - All rights reserved | <a href="https://taezeem14.github.io/About_Me.io" target="_blank">About Me</a></p>
   </div>
 
   <div class="calculator-container">
